// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell should render a multi select as a list of values 1`] = `
<ValueList
  compact={true}
  property={
    Object {
      "label": "Languages",
      "name": "languages",
      "type": "multiselect",
      "value": Array [
        Object {
          "value": "Español",
        },
        Object {
          "value": "English",
        },
      ],
    }
  }
/>
`;

exports[`TableCell should render a multi select of nested values as a list of values 1`] = `
<ValueList
  compact={true}
  property={
    Object {
      "label": "People",
      "name": "people",
      "type": "multiselect",
      "value": Array [
        Object {
          "value": "male: A guy",
        },
      ],
    }
  }
/>
`;
